src/test/ui/associated-types-in-ambiguous-context.stderr
error[E0223]: ambiguous associated type
  --> $DIR/associated-types-in-ambiguous-context.rs:16:36
   |
16 | fn get<T:Get,U:Get>(x: T, y: U) -> Get::Value {}
   |                                    ^^^^^^^^^^ ambiguous associated type
   |
   = note: specify the type using the syntax `<Type as Get>::Value`

error[E0223]: ambiguous associated type
  --> $DIR/associated-types-in-ambiguous-context.rs:25:10
   |
25 | type X = std::ops::Deref::Target;
   |          ^^^^^^^^^^^^^^^^^^^^^^^ ambiguous associated type
   |
   = note: specify the type using the syntax `<Type as std::ops::Deref>::Target`

error[E0223]: ambiguous associated type
  --> $DIR/associated-types-in-ambiguous-context.rs:21:23
   |
21 |     fn grab(&self) -> Grab::Value;
   |                       ^^^^^^^^^^^ ambiguous associated type
   |
   = note: specify the type using the syntax `<Type as Grab>::Value`

error: aborting due to 3 previous errors

